--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chai-backend-yt-project",
   "version": "1.0.0",
   "description": "a backend learning by chai aur code yt channel",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +13,8 @@
     "chai"
   ],
   "author": "sparkmithun",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
