--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,13 @@
 PORT=8000
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=abc
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=123
+REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=dcyqngluj
+CLOUDINARY_API_KEY=863614355923867
+CLOUDINARY_API_SECRET=NptmWKErofuQzt4TZwLrjWBJYnY
+
 MONGOBD_URI=mongodb+srv://sparkmithun2004:sparkmithun2004@cluster0.zizgias.mongodb.net
